tests/rosetta/out/Java/bitmap-midpoint-circle-algorithm.error
javac: exit status 1
/tmp/BitmapMidpointCircleAlgorithm.java:61: error: incompatible types: String cannot be converted to Number
            s = s + ((Number)row.get(i)).doubleValue();
                                    ^
Note: /tmp/BitmapMidpointCircleAlgorithm.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
